bug solved: modals z-index

--- a/less/2-quarks/reset.less
+++ b/less/2-quarks/reset.less
@@ -9,6 +9,16 @@ body{
 	background-color: @colorK4;
 }
 
+strong{
+	font-weight: normal;
+	font-family: 'robotobold';
+}
+
+em{
+	font-style: normal;
+	font-family: 'robotoitalic';
+}
+
 ul{
 	list-style: none;
 	padding-left: 0;
@@ -43,7 +53,5 @@ ul{
 //content
 .content{
 	min-height: 600px;
-	position: relative;
-	z-index: 2;
 }
 
