--- a/less/3-atoms/titles.less
+++ b/less/3-atoms/titles.less
@@ -5,4 +5,6 @@
 	text-transform: uppercase;
 	padding-top: 88px; 
 	margin-bottom: 14px;
+	position: relative;
+	z-index: 2;
 }
